# ADL-dataset

./: README.md
collector/: CMakeLists.txt  package.xml
collector/src/: data_collect.cpp  data_color.cpp  ellipse_test.cpp  pcl_test.cpp
script/: convert_adl_to_coco.py  convert_adl_to_coco.py~  evaluation.py  label_scene.py  substitute_attempt.py  substitute_back.py  substitute_back.py~  substitute_single.py
